Fix info box flicker

--- a/src/sass/default.scss
+++ b/src/sass/default.scss
@@ -96,7 +96,7 @@ body {
   background-color: #D0D0D0F0;
   z-index: 100;
   border-radius: 2px;
-  visibility: hidden;
+  opacity: 0;
   padding: 10px;
   font-size: 18px;
   font-family: 'Barlow', sans-serif;
